--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
+    "dotenv": "^5.0.1",
     "netlify-lambda": "^0.3.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "node-fetch": "^2.1.2",
+    "proxy-agent": "^2.2.0",
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0",
     "react-scripts": "1.1.1"
   },
   "scripts": {
@@ -21,7 +24,8 @@
       "target": "http://localhost:9000",
       "pathRewrite": {
         "^/\\.netlify/functions": ""
-      }
+      },
+      "source": false
     }
   }
 }
