--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "dotenv": "^5.0.1",
+    "netlify-identity-widget": "^1.4.11",
     "netlify-lambda": "^0.3.0",
     "node-fetch": "^2.1.2",
     "proxy-agent": "^2.2.0",
