--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "dotenv": "^5.0.1",
+    "googleapi": "^1.0.2",
+    "googleapis": "^28.1.0",
+    "gtoken": "^2.3.0",
     "netlify-identity-widget": "^1.4.11",
     "netlify-lambda": "^0.3.0",
     "node-fetch": "^2.1.2",
