--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "start:lambda": "netlify-lambda serve src/lambda",
     "build": "react-scripts build",
     "build:lambda": "netlify-lambda build src/lambda",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test --env=jstatesdom",
     "eject": "react-scripts eject"
   },
   "proxy": {
